adicionando informacoes a respeito do servidor

--- a/cadastro.html
+++ b/cadastro.html
@@ -197,7 +197,7 @@
   <div id="toast" class="toast">Salvo!</div>
 
   <script>
-    const API_BASE = 'http://localhost:8080';
+    const API_BASE = 'https://sd-paokentin-backend.onrender.com';
     const PAES_ENDPOINT = API_BASE + '/paes';
 
     const form = document.getElementById('form-pao');
