--- a/cliente.html
+++ b/cliente.html
@@ -55,7 +55,7 @@
   <div id="toast" class="toast">Atualizado!</div>
 
   <script>
-    const API_BASE = 'http://localhost:8080';
+    const API_BASE = 'https://sd-paokentin-backend.onrender.com';
     const FORNADAS_ENDPOINT = API_BASE + '/paes/fornadas';
 
     const listEl = document.getElementById('fornadas-list');
