--- a/fornada.html
+++ b/fornada.html
@@ -194,7 +194,7 @@
   <div id="toast" class="toast" role="status" aria-live="polite">Registrado!</div>
 
   <script>
-    const API_BASE = 'http://localhost:8080';
+    const API_BASE = 'https://sd-paokentin-backend.onrender.com';
     const PAES_ENDPOINT = API_BASE + '/paes';
     const FORNADAS_ENDPOINT = API_BASE + '/paes/fornadas';
     const RECENTES_ENDPOINT = API_BASE + '/paes/fornadas';
