adicionando cadastro.html a tela principal

--- a/index.html
+++ b/index.html
@@ -79,14 +79,11 @@
     <nav>
         <a href="cliente.html">Clientes</a>
         <a href="fornada.html">Fornadas</a>
+        <a href="cadastro.html">Cadastro</a>
     </nav>
 
     <div class="container">
         <p>Bem-vindo ao sistema de gerenciamento de pães do <strong>Pão Kentin</strong>! Aqui você pode cadastrar novos pães, iniciar fornadas e acompanhar o andamento das produções.</p>
-
-        <h2>Backend</h2>
-        <p>O backend está hospedado em: <a href="https://sd-paokentin-backend.onrender.com" target="_blank">https://sd-paokentin-backend.onrender.com</a></p>
-        <p>Todos os dados de pães e fornadas são gerenciados pelo backend.</p>
     </div>
 
     <footer>
